--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
+:root {
+  --nav-footer-bg: #2c3e50;
+  --sm-footer-bg: #1a252f;
+  --section-bg: #1abc9c;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.nav_footer {
+  background-color: var(--nav-footer-bg);
+}
+
+.sm_footer {
+  background-color: var(--sm-footer-bg);
+}
+
+.sec {
+  background-color: var(--section-bg);
+}
+
+.nav_footer,
+.sec,
+.sm_footer {
+  color: #fff;
+}
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 4rem;
 }
